
  News group:              gmane.emacs.viewmail on news.gmane.org  
                           (gnu.emacs.vm.info is defunct)
  
  Please DO NOT use the Usenet newsgroup gnu.emacs.vm.info because it has an
  unreliable mail link to the mailing list.  You can however browse the
  archives of the newsgroup at Google Groups.
  
VM 8.2.1

  IMPROVEMENTS

   * New variable `vm-subject-tag-prefix' allows the subject tags added by
     mailing lists to be ignored during sorting etc. (similar to
     `vm-subject-ignored-prefix').  Another variable
     `vm-summary-strip-subject-tags' removes them from summary lines as well.

VM 8.2.0

  CHANGES

   * New variable (actually added in 8.2.0a)
     `vm-fill-paragraphs-containing-long-lines-in-reply' which specifies the
     maximum line length beyond which filling should be done in composed
     messages (just before they are sent).

   * Newly documented command `vm-fill-long-lines-in-reply' fills a message
     being composed, along with its included text.

   * The variable `vm-w3m-use-w3m-minor-mode-map' is set to `nil' by default
     so that VM key bindings will be functional inside HTML text (when
     displayed using the Emacs-w3m browser).

   * The variable `vm-mutable-frames' has a new name to convey its sense
     better: `vm-mutable-frame-configuration'.  The old name still works.

   IMPROVEMENTS

   * International character sets supported in IMAP mailbox names.

VM 8.2.0b  (2011-12-28)

  CHANGES

   * New customization variable `vm-spam-score-headers' allows the
     extraction of spam scores.  (Replaces the former variable
     `vm-vs-spam-score-headers' used by vm-avirtual.el.) 

   * The variable `vm-mime-alternative-select-method' renamed to
     `vm-mime-alternative-show-method' to make it clear that it only applies
     to the viewing of messages.  The new variable
     `vm-mime-alternative-yank-method' controls the selection of
     alternatives for citation in replies.
